--- a/src/pages/blog/tags/[tag].astro
+++ b/src/pages/blog/tags/[tag].astro
@@ -58,8 +58,8 @@ const pageDescription = `${tagName}に関するブログ記事の一覧です。
     </header>
 
     <nav class="archive-navigation">
-      <a href="/blog" class="nav-button nav-home">
-        <span>記事一覧へ</span>
+      <a href="/blog" class="back-link">
+        <span>記事一覧に戻る</span>
       </a>
     </nav>
 
@@ -87,7 +87,7 @@ const pageDescription = `${tagName}に関するブログ記事の一覧です。
 
     <nav class="bottom-navigation">
       <a href="/blog" class="back-link">
-        <span>全記事一覧に戻る</span>
+        <span>記事一覧に戻る</span>
       </a>
     </nav>
   </main>
