--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date();
 	<div class="footer-content">
 		&copy; {today.getFullYear()} Amin Kyo. All rights reserved.
 		<div class="footer-social-links">
-		<a href="https://mstdn.jp/@amin" target="_blank">
+		<a href="https://mstdn.jp/@amin" target="_blank" rel="me">
 			<span class="sr-only">Mastodon</span>
 			<svg
 				viewBox="0 0 16 16"
